--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
 <style>
   body { font-family: system-ui, -apple-system, sans-serif; padding:16px; background:#f0f2f5; color:#333; margin:0; }
   .card { background:#fff; padding:16px; border-radius:12px; margin-bottom:12px; box-shadow: 0 2px 6px rgba(0,0,0,0.05); border:1px solid #eee; }
-  .card.past-job { opacity: 0.65; background: #f8f9fa; border: 1px dashed #ccc; }
+  .card.past-job { opacity: 0.6; background: #f8f9fa; filter: grayscale(0.5); border: 1px dashed #ccc; }
   h2 { font-size:22px; color:#0a7cff; margin-bottom:5px; }
   #username { font-weight:bold; font-size:18px; }
   #roleBadge { display:inline-block; padding:3px 10px; border-radius:15px; background:#e4e6eb; font-size:12px; margin-bottom:15px; font-weight:600; }
   
-  button { width:100%; padding:14px; font-size:16px; border-radius:10px; border:none; margin-bottom:10px; cursor: pointer; font-weight:bold; }
+  button { width:100%; padding:14px; font-size:16px; border-radius:10px; border:none; margin-bottom:8px; cursor: pointer; font-weight:bold; }
   .primary { background:#0a7cff; color:#fff; }
   .secondary { background:#e4e6eb; color:#4b4f56; }
-  .success { background:#28a745; color:#fff; margin-top:10px; }
+  .success { background:#28a745; color:#fff; }
+  .danger { background:#fff1f0; color:#ff4d4f; border:1px solid #ffccc7; padding:10px; font-size:14px; }
   
   input, select { width:100%; padding:12px; box-sizing: border-box; font-size:16px; margin-bottom:10px; border-radius:8px; border:1px solid #ddd; }
   #formBox { display:none; }
-  .label-text { font-size:11px; color:#8c939d; text-transform:uppercase; margin-top:8px; font-weight: bold; }
-  .val-text { font-size:15px; margin-bottom:4px; line-height: 1.4; }
-  .status-badge { font-weight: bold; padding: 2px 8px; border-radius: 5px; font-size: 13px; }
+  .val-text { font-size:15px; margin-bottom:5px; line-height: 1.4; }
+  .label-text { font-size:11px; color:#8c939d; font-weight: bold; }
 
   #loading { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(255,255,255,0.8); z-index:9999; justify-content:center; align-items:center; flex-direction:column; }
   .spinner { border: 4px solid #f3f3f3; border-top: 4px solid #0a7cff; border-radius: 50%; width: 40px; height: 40px; animation: spin 1s linear infinite; }
@@ -32,7 +32,7 @@
 
 <div id="loading">
   <div class="spinner"></div>
-  <p style="margin-top:10px; font-weight:bold; color:#0a7cff;">กำลังโหลด...</p>
+  <p style="margin-top:10px; font-weight:bold; color:#0a7cff;">กำลังประมวลผล...</p>
 </div>
 
 <div style="max-width: 500px; margin: auto;">
@@ -42,14 +42,15 @@
 
   <div id="actionArea">
     <button id="bookBtn" class="primary">...</button>
+    <div id="roleToggleArea"></div>
   </div>
 
   <div id="formBox" class="card">
-    <h3 style="margin-top:0;">กรอกรายละเอียด</h3>
+    <h3 style="margin-top:0;">กรอกข้อมูลการเดินทาง</h3>
     <input type="date" id="booking_date">
     <input type="time" id="booking_time">
     <select id="vehicle_type">
-      <option value="ไม่ระบุ">ไม่ระบุประเภทรถ</option>
+      <option value="ไม่ระบุ">เลือกประเภทรถ</option>
       <option value="รถเก๋ง">รถเก๋ง</option>
       <option value="รถกระบะ">รถกระบะ</option>
       <option value="รถตู้">รถตู้</option>
@@ -58,36 +59,37 @@
     <input type="text" id="pickup_location" placeholder="จุดรับ">
     <input type="text" id="dropoff_location" placeholder="จุดส่ง">
     <input type="text" id="contact_mobile" placeholder="เบอร์โทรติดต่อ">
-    <button class="primary" onclick="submitBooking()">ยืนยัน</button>
+    <button class="primary" onclick="submitBooking()">บันทึกข้อมูล</button>
     <button class="secondary" onclick="closeForm()">ยกเลิก</button>
   </div>
 
   <div id="historyBox"></div>
-  <div id="roleToggleArea" style="margin-top:20px;"></div>
 </div>
 
 <script>
-const ENDPOINT = "https://script.google.com/macros/s/AKfycbyUArXuakK9CoS5N7Mwn5zdXD-5Jif5phVGV_2o2By9ZHVYmwg7o394_Z5TFJlDQV0W0w/exec"; 
+const ENDPOINT = "https://script.google.com/macros/s/AKfycbyBeYahEZBZlC3_h8Fzyoit6VQw4sYaWDkz1aY47MAjJGaVeQikPy-0fET7fFZ6n5hVZA/exec"; 
 let userId = "", role = "", mobile = "", displayName = "";
 
 function toggleLoad(s) { document.getElementById("loading").style.display = s ? "flex" : "none"; }
 
-// ฟังก์ชันแปลงวันที่ให้อ่านง่าย
-function formatThaiDate(dateStr) {
-  if (!dateStr || dateStr === "null") return "-";
-  const d = new Date(dateStr);
+// ฟังก์ชันแปลงวันที่/เวลาไทย (แก้ bug timezone)
+function formatThaiDateTime(dateVal, timeVal) {
+  if (!dateVal) return "-";
+  const d = new Date(dateVal);
   const months = ["ม.ค.", "ก.พ.", "มี.ค.", "เม.ย.", "พ.ค.", "มิ.ย.", "ก.ค.", "ส.ค.", "ก.ย.", "ต.ค.", "พ.ย.", "ธ.ค."];
-  return `${d.getDate()} ${months[d.getMonth()]} ${d.getFullYear() + 543}`;
-}
-
-function formatThaiTime(timeStr) {
-  if (!timeStr || timeStr === "null") return "-";
-  // ถ้าเป็น Date object จากการดึง Sheet
-  if (timeStr.includes("T") || timeStr.length > 8) {
-     const t = new Date(timeStr);
-     return t.getHours().toString().padStart(2, '0') + ":" + t.getMinutes().toString().padStart(2, '0') + " น.";
+  const dateStr = `${d.getDate()} ${months[d.getMonth()]} ${d.getFullYear() + 543}`;
+  
+  let timeStr = "";
+  if (timeVal) {
+    const t = new Date(timeVal);
+    // ตรวจสอบว่าเป็น Date Object จาก Google Sheet หรือ String ธรรมดา
+    if (!isNaN(t.getTime()) && String(timeVal).includes("T")) {
+      timeStr = t.getHours().toString().padStart(2, '0') + ":" + t.getMinutes().toString().padStart(2, '0');
+    } else {
+      timeStr = String(timeVal).substring(0, 5);
+    }
   }
-  return timeStr.substring(0, 5) + " น.";
+  return dateStr + " | " + timeStr + " น.";
 }
 
 async function init() {
@@ -111,11 +113,15 @@ function renderUI() {
   const bookBtn = document.getElementById("bookBtn");
   const roleToggleArea = document.getElementById("roleToggleArea");
   document.getElementById("roleBadge").innerText = (role === "driver") ? "🔓 พนักงานขับรถ" : "👤 ผู้ใช้งานทั่วไป";
-  bookBtn.innerText = (role === "driver") ? "กรอกข้อมูลงานรับเอง" : "จองรถพร้อมคนขับ";
+  
+  if (role === "driver") {
+    bookBtn.innerText = "กรอกข้อมูลงานรับเอง";
+    roleToggleArea.innerHTML = `<button class="secondary" onclick="cancelDriverRole()">ยกเลิกบทบาทพนักงานขับรถ</button>`;
+  } else {
+    bookBtn.innerText = "จองรถพร้อมคนขับ";
+    roleToggleArea.innerHTML = `<button class="secondary" onclick="registerDriver()">สมัครเป็นพนักงานขับรถ</button>`;
+  }
   bookBtn.onclick = () => { document.getElementById("formBox").style.display = "block"; window.scrollTo(0,0); };
-  roleToggleArea.innerHTML = (role === "driver") 
-    ? `<button class="secondary" style="font-size:12px;" onclick="cancelDriverRole()">ยกเลิกบทบาทพนักงานขับรถ</button>`
-    : `<button class="secondary" style="font-size:12px;" onclick="registerDriver()">สมัครเป็นพนักงานขับรถ</button>`;
 }
 
 async function showHistory() {
@@ -123,30 +129,32 @@ async function showHistory() {
   const hBox = document.getElementById("historyBox");
   const res = await fetch(ENDPOINT, { method: "POST", body: JSON.stringify({ action: "get_all_bookings", line_user_id: userId }) }).then(r => r.json());
   
-  const now = new Date().setHours(0,0,0,0);
+  const nowDay = new Date().setHours(0,0,0,0);
   let filtered = (res.data || []).filter(b => (role === "driver") ? (b.booked_by === userId || b.driver_line_id === userId || b.status === "pending") : (b.booked_by === userId));
 
-  hBox.innerHTML = "<h3 style='margin: 15px 0 10px 0;'>รายการงาน</h3>";
+  hBox.innerHTML = "<h3 style='margin: 20px 0 10px 0;'>รายการงาน</h3>";
   
   if (filtered.length === 0) {
-    hBox.innerHTML += "<p style='text-align:center; color:#999;'>ไม่มีรายการในขณะนี้</p>";
+    hBox.innerHTML += "<p style='text-align:center; color:#999; margin-top:20px;'>ไม่พบข้อมูล</p>";
   } else {
     hBox.innerHTML += filtered.reverse().map(b => {
       const bDate = new Date(b.booking_date).setHours(0,0,0,0);
-      const isPast = bDate < now;
+      const isPast = bDate < nowDay;
       const isCancelled = b.status === "cancelled";
+      const isOwner = (b.booked_by === userId || b.driver_line_id === userId);
       
       return `
         <div class="card ${ (isPast || isCancelled) ? 'past-job' : '' }">
           <div class="val-text"><b>${b.pickup_location} ➡️ ${b.dropoff_location}</b></div>
-          <div class="val-text">📅 ${formatThaiDate(b.booking_date)} | ⏰ ${formatThaiTime(b.booking_time)}</div>
+          <div class="val-text">📅 ${formatThaiDateTime(b.booking_date, b.booking_time)}</div>
           <div class="val-text">👤 ผู้จอง: ${b.user_display_name} | 🚗 ${b.vehicle_type}</div>
           <div class="val-text">
-            สถานะ: <span class="status-badge" style="color:${b.status === 'pending' ? '#f39c12' : '#28a745'}">
+            สถานะ: <span style="font-weight:bold; color:${b.status === 'pending' ? '#f39c12' : '#28a745'}">
               ${b.status.toUpperCase()} ${b.driver_name ? '('+b.driver_name+')' : ''}
             </span>
           </div>
           ${(role === "driver" && b.status === "pending") ? `<button class="success" onclick="acceptJob('${b.booking_id}')">✅ รับงานนี้</button>` : ""}
+          ${(isOwner && !isCancelled) ? `<button class="danger" onclick="cancelBooking('${b.booking_id}')">❌ ยกเลิกงานนี้</button>` : ""}
         </div>
       `;
     }).join("");
@@ -154,10 +162,15 @@ async function showHistory() {
   toggleLoad(false);
 }
 
+async function cancelBooking(id) {
+  if (!confirm("คุณต้องการยกเลิกงานนี้ใช่หรือไม่?")) return;
+  toggleLoad(true);
+  const res = await fetch(ENDPOINT, { method: "POST", body: JSON.stringify({ action: "cancel_booking", booking_id: id }) }).then(r => r.json());
+  if (res.success) showHistory();
+  toggleLoad(false);
+}
+
 async function submitBooking() {
-  const fields = ["booking_date", "booking_time", "pickup_location", "dropoff_location"];
-  for (let f of fields) if (!document.getElementById(f).value) return alert("กรุณากรอกข้อมูลสำคัญให้ครบ");
-  
   toggleLoad(true);
   const res = await fetch(ENDPOINT, {
     method: "POST",
@@ -185,8 +198,22 @@ async function registerDriver() {
   location.reload();
 }
 
-async function cancelDriverRole() { if (confirm("ยกเลิกบทบาท?")) { toggleLoad(true); await fetch(ENDPOINT, { method: "POST", body: JSON.stringify({ action: "cancel_driver", line_user_id: userId }) }); location.reload(); } }
-async function acceptJob(id) { if (confirm("ยืนยันรับงาน?")) { toggleLoad(true); await fetch(ENDPOINT, { method: "POST", body: JSON.stringify({ action: "accept_job", booking_id: id, line_user_id: userId, display_name: displayName }) }); showHistory(); } }
+async function cancelDriverRole() {
+  if (confirm("ยืนยันยกเลิกบทบาทพนักงานขับรถ?")) {
+    toggleLoad(true);
+    await fetch(ENDPOINT, { method: "POST", body: JSON.stringify({ action: "cancel_driver", line_user_id: userId }) });
+    location.reload();
+  }
+}
+
+async function acceptJob(id) {
+  if (confirm("ยืนยันรับงาน?")) {
+    toggleLoad(true);
+    await fetch(ENDPOINT, { method: "POST", body: JSON.stringify({ action: "accept_job", booking_id: id, line_user_id: userId, display_name: displayName }) });
+    showHistory();
+  }
+}
+
 function closeForm() { document.getElementById("formBox").style.display = "none"; }
 
 init();
