--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ async function init() {
 
     const res = await fetch(ENDPOINT, { method: "POST", body: JSON.stringify({ action: "auto_register", line_user_id: userId, display_name: displayName }) }).then(r => r.json());
     role = res.role;
-    mobile = res.mobile; // เก็บเบอร์โทรที่ได้มาจาก Server
+    mobile = res.mobile; 
     renderUI();
     await showHistory();
   } catch (err) { alert(err); }
@@ -119,8 +119,6 @@ function renderUI() {
   const mobileArea = document.getElementById("driverMobileArea");
   
   document.getElementById("roleBadge").innerText = (role === "driver") ? "🔓 พนักงานขับรถ" : "👤 ผู้ใช้งานทั่วไป";
-  
-  // แสดงเบอร์โทรเฉพาะคนขับ
   mobileArea.innerText = (role === "driver" && mobile) ? "📞 เบอร์โทร: " + mobile : "";
   
   bookBtn.innerText = (role === "driver") ? "➕ เพิ่มงานใหม่ (รับเอง)" : "📅 จองรถล่วงหน้า";
@@ -144,12 +142,18 @@ async function showHistory() {
   hBox.innerHTML += filtered.reverse().map(b => {
     const isPast = new Date(b.booking_date).setHours(0,0,0,0) < nowDay;
     const isCancelled = b.status === "cancelled";
+    
+    // กำหนดสีตามสถานะ (แก้ไขเฉพาะตรงนี้)
+    let statusColor = "#28a745"; // สีเขียว (ปกติ)
+    if (b.status === "pending") statusColor = "#f39c12"; // สีส้ม
+    if (isCancelled) statusColor = "#d9534f"; // สีแดงหม่น
+
     return `
       <div class="card ${ (isPast || isCancelled) ? 'past-job' : '' }">
         <div class="val-text"><b>${b.pickup_location} ➡️ ${b.dropoff_location}</b></div>
         <div class="val-text">📅 ${formatThaiDateTime(b.booking_date, b.booking_time)}</div>
         <div class="val-text">👤 จองโดย: ${b.user_display_name} | 🚗 ${b.vehicle_type}</div>
-        <div class="val-text">สถานะ: <span style="font-weight:bold; color:${b.status === 'pending' ? '#f39c12' : '#28a745'}">${b.status.toUpperCase()} ${b.driver_name ? '('+b.driver_name+')' : ''}</span></div>
+        <div class="val-text">สถานะ: <span style="font-weight:bold; color:${statusColor}">${b.status.toUpperCase()} ${b.driver_name ? '('+b.driver_name+')' : ''}</span></div>
         ${(role === "driver" && b.status === "pending") ? `<button class="success" onclick="acceptJob('${b.booking_id}')">✅ รับงานนี้</button>` : ""}
         ${((b.booked_by === userId || b.driver_line_id === userId) && !isCancelled) ? `<button class="danger" onclick="cancelBooking('${b.booking_id}')">❌ ยกเลิกงานนี้</button>` : ""}
       </div>
@@ -181,7 +185,6 @@ async function submitBooking() {
   
   if (res.success) { 
     document.getElementById("formBox").style.display = "none"; 
-    // Reset Form
     document.getElementById("booking_date").value = "";
     document.getElementById("booking_time").value = "";
     await showHistory(); 
